force-app/main/default/objects/Sales_History_Details__c/Sales_History_Details__c.object-meta.xml
<CustomObject>
    <label>DN-Sales History Detail</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales History Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>