force-app/main/default/objects/Sales_History_Details__c/fields/All_ZB_Key_Implants__c.field-meta.xml
<CustomField>
    <fullName>All_ZB_Key_Implants__c</fullName>
    <formula>IF( Product_Prodmix__c = &quot;LODI NARROW&quot; || 
Product_Prodmix__c = &quot;ADVENT TP&quot; || 
Product_Prodmix__c = &quot;EX HEX PW&quot; || 
Product_Prodmix__c = &quot;EX HEX TP&quot; || 
Product_Prodmix__c = &quot;CERTAIN PW&quot; || 
Product_Prodmix__c = &quot;CERTAIN TP&quot; || 
Product_Prodmix__c = &quot;DFFIT TP&quot; || 
Product_Prodmix__c = &quot;SWSSPLUS TP&quot; || 
Product_Prodmix__c = &quot;FFIT PW&quot; || 
Product_Prodmix__c = &quot;FFIT TP&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>All ZB Key Implants</label>
    <type>Checkbox</type>
</CustomField>