force-app/main/default/objects/Sales_History_Details__c/fields/CY_Amount__c.field-meta.xml
<CustomField>
    <fullName>CY_Amount__c</fullName>
    <formula>IF( YEAR(  Order_Number__r.Invoice_Date__c ) = YEAR(TODAY()) ,  Line_Item_Sale_Amount__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Year Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>