force-app/main/default/objects/Sales_History_Details__c/fields/Digital__c.field-meta.xml
<CustomField>
    <fullName>Digital__c</fullName>
    <formula>IF( Product_Category__c = &quot;Digital&quot; || Product_Category__c = &quot;DIGITAL&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital</label>
    <type>Checkbox</type>
</CustomField>