force-app/main/default/objects/Sales_History_Details__c/fields/Exact_Total__c.field-meta.xml
<CustomField>
    <fullName>Exact_Total__c</fullName>
    <formula>Unit_Price__c *  ABS(Order_Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Exact Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>