force-app/main/default/objects/Sales_History_Details__c/fields/Extended_Amount__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount__c</fullName>
    <formula>Committed_Quantity__c  *  Unit_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>