force-app/main/default/objects/Sales_History_Details__c/fields/Extended_Amount_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Amount_Cost__c</fullName>
    <formula>Committed_Quantity__c * Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Amount - Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>