force-app/main/default/objects/Sales_History_Details__c/fields/Implant__c.field-meta.xml
<CustomField>
    <fullName>Implant__c</fullName>
    <formula>IF( Product_Category__c = &quot;Implant&quot; || Product_Category__c = &quot;IMPLANT&quot;, TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implant</label>
    <type>Checkbox</type>
</CustomField>