force-app/main/default/objects/Sales_History_Details__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <formula>Order_Number__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice No</label>
    <type>Text</type>
</CustomField>