force-app/main/default/objects/Sales_History_Details__c/fields/Line_Item_Sale_Amount__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Sale_Amount__c</fullName>
    <formula>if ( Discountable__c = False,
Extended_Amount__c ,
(Extended_Amount__c - (Extended_Amount__c * Order_Number__r.Discount_Percent__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Sale Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>