force-app/main/default/objects/Sales_History_Details__c/fields/MC_Conversion_Rate__c.field-meta.xml
<CustomField>
    <fullName>MC_Conversion_Rate__c</fullName>
    <label>MC Conversion Rate</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>