force-app/main/default/objects/Sales_History_Details__c/fields/Op_Review_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Op_Review_Sub_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Op Review Sub-Category</label>
    <length>200</length>
    <type>Text</type>
</CustomField>