force-app/main/default/objects/Sales_History_Details__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Invoice Number</label>
    <referenceTo>Sales_History__c</referenceTo>
    <relationshipLabel>Sales History Details</relationshipLabel>
    <relationshipName>R00N70000001yJccEAE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>