force-app/main/default/objects/Sales_History_Details__c/fields/Order_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity__c</fullName>
    <label>Units</label>
    <precision>15</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>