force-app/main/default/objects/Sales_History_Details__c/fields/Order_Quantity_Stock_UOM__c.field-meta.xml
<CustomField>
    <fullName>Order_Quantity_Stock_UOM__c</fullName>
    <label>Order Quantity Stock UOM</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>