force-app/main/default/objects/Sales_History_Details__c/fields/PartnerZ_Deal__c.field-meta.xml
<CustomField>
    <fullName>PartnerZ_Deal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Confirmed PartnerZ Deal</description>
    <label>PartnerZ Deal</label>
    <type>Checkbox</type>
</CustomField>