force-app/main/default/objects/Sales_History_Details__c/fields/Product_Market__c.field-meta.xml
<CustomField>
    <fullName>Product_Market__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Market</label>
    <length>255</length>
    <type>Text</type>
</CustomField>