force-app/main/default/objects/Sales_History_Details__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <description>Oracle SIOP Group</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Product Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>