force-app/main/default/objects/Sales_History_Details__c/fields/Prosthetic__c.field-meta.xml
<CustomField>
    <fullName>Prosthetic__c</fullName>
    <formula>IF( Product_Category__c = &quot;PROSTHETIC&quot; || Product_Category__c = &quot;Prosthetic&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prosthetic</label>
    <type>Checkbox</type>
</CustomField>