force-app/main/default/objects/Sales_History_Details__c/fields/Quarter__c.field-meta.xml
<CustomField>
    <fullName>Quarter__c</fullName>
    <formula>CASE( MONTH (  Order_Number__r.Invoice_Date__c ) , 1, &quot;Q1&quot;, 2, &quot;Q1&quot;, 3, &quot;Q1&quot;, 4, &quot;Q2&quot;, 5, &quot;Q2&quot;, 6, &quot;Q2&quot;, 7, &quot;Q3&quot;, 8, &quot;Q3&quot;, 9, &quot;Q3&quot;, &quot;Q4&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarter</label>
    <type>Text</type>
</CustomField>