force-app/main/default/objects/Sales_History_Details__c/fields/Regenerative__c.field-meta.xml
<CustomField>
    <fullName>Regenerative__c</fullName>
    <formula>IF( Product_Category__c = &quot;Regenerative&quot; || Product_Category__c = &quot;REGENERATIVE&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regenerative</label>
    <type>Checkbox</type>
</CustomField>