force-app/main/default/objects/Sales_History_Details__c/fields/Reusable_Drill__c.field-meta.xml
<CustomField>
    <fullName>Reusable_Drill__c</fullName>
    <formula>IF( Product_Family__c = &quot;REUSABLE DRILLS&quot;, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reusable Drill</label>
    <type>Checkbox</type>
</CustomField>