force-app/main/default/objects/Sales_History_Details__c/fields/Unit_Measure_Stock__c.field-meta.xml
<CustomField>
    <fullName>Unit_Measure_Stock__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Unit of Measure - Stock</label>
    <length>10</length>
    <type>Text</type>
</CustomField>