force-app/main/default/objects/Sales_History_Details__c/fields/Whse__c.field-meta.xml
<CustomField>
    <fullName>Whse__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Whse</label>
    <length>32</length>
    <type>Text</type>
</CustomField>