force-app/main/default/objects/Sales_History_Details__c/fields/X25_Unit_T3_Promo__c.field-meta.xml
<CustomField>
    <fullName>X25_Unit_T3_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>25 Unit T3 Promo</label>
    <type>Checkbox</type>
</CustomField>