force-app/main/default/objects/Sales_History_Details__c/recordTypes/DN_US_Sales_History_Detail.recordType-meta.xml
<RecordType>
    <fullName>DN_US_Sales_History_Detail</fullName>
    <active>true</active>
    <label>DN-US-Sales History Detail</label>
</RecordType>