force-app/main/default/objects/Sales_History_Details__c/listViews/Invoiced_this_Month_with_Product_Detail.listView-meta.xml
<ListView>
    <fullName>Invoiced_this_Month_with_Product_Detail</fullName>
    <columns>Order_Number__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Invoice_Date__c</columns>
    <columns>NAME</columns>
    <columns>Committed_Quantity__c</columns>
    <columns>Line_Item_Sale_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Invoice_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Invoiced this Month with Product Detail</label>
</ListView>